--- a/demo.css
+++ b/demo.css
@@ -52,7 +52,7 @@ div.new, div.add, div.delete {
   	justify-content: space-between;
 }
 
-div.search button, div.follow button, div.new button, div.add button, div.delete button {
+div.search button, div.follow button, div.new button, div.add button, div.delete button, div.toggle button, #addclick, #removeclick {
 	border-radius: 5px;
 	max-width: 90%;
 	text-align: center;
@@ -113,6 +113,10 @@ button:hover {
 	color: #3A4D39;
 }
 
+#options {
+	display:none
+}
+
 hr {
     display: block;
     height: 1px;
@@ -124,8 +128,8 @@ hr {
 }
 
 .arrow-icon {
-	width: 14px;
-	height: 14px;
+	width: 20px;
+	height: 20px;
 }
 
 	.arrow-icon > div {
